--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
         left: -0.8em;
         display: inline-block;
         border: 0.8em solid transparent;
-        border-top-color: #2980b9;
+        border-top-color: #ff7f3e;
         border-radius: 50%;
         box-sizing: content-box;
 
