--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
   <app-root>
     <!-- 
-      This loader is taken from my own pen (at CodePen) 
+      This loader is my own pen (at CodePen) 
       https://codepen.io/ritwickdey/pen/WMdpyE
      -->
     <style>
@@ -25,12 +25,21 @@
         box-sizing: border-box;
       }
 
+      html {
+        font-size: 62.5%;
+      }
+
+      body {
+        overflow: hidden;
+      }
+
       .container {
         display: flex;
         height: 100vh;
         width: 100vw;
         justify-content: center;
         align-items: center;
+        background: #fff;
       }
 
       .loader-container {
